PGP stream encryption using the Bouncy Castle Java library